--- a/car-agency-website/src/app/pages/home/home.html
+++ b/car-agency-website/src/app/pages/home/home.html
@@ -6,7 +6,7 @@
         class="carousel-slide"
         *ngFor="let car of featuredCars; let i = index"
         [class.active]="i === currentSlide"
-        [style.background-image]="'url(' + car.image + ')'"
+        [style.background-image]="'url(assets/images/hero.jpg)'"
       >
         <div class="hero-overlay"></div>
         <div class="hero-content">
