--- a/car-agency-website/src/app/pages/about/about.html
+++ b/car-agency-website/src/app/pages/about/about.html
@@ -32,68 +32,7 @@
         </div>
         <div class="col-lg-6">
           <div class="mission-image fade-in-right">
-            <img src="assets/images/showroom/showroom_1.jpg" alt="Our Showroom" class="img-fluid rounded">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Team Section -->
-    <section class="team-section py-5">
-      <div class="text-center mb-5">
-        <h2 class="section-title">Meet Our Team</h2>
-        <p class="section-subtitle">Passionate professionals dedicated to your automotive dreams</p>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="team-card fade-in-up">
-            <div class="team-image">
-              <img src="assets/images/team/team_1.jpg" alt="Team Member" class="img-fluid">
-            </div>
-            <div class="team-info">
-              <h4>Michael Rodriguez</h4>
-              <p class="team-role">Sales Director</p>
-              <p class="team-description">With over 10 years in luxury automotive sales, Michael ensures every client receives personalized attention and expert guidance.</p>
-              <div class="team-social">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="team-card fade-in-up">
-            <div class="team-image">
-              <img src="assets/images/team/team_2.jpg" alt="Team Member" class="img-fluid">
-            </div>
-            <div class="team-info">
-              <h4>Sarah Chen</h4>
-              <p class="team-role">Customer Experience Manager</p>
-              <p class="team-description">Sarah specializes in creating memorable experiences, from initial consultation to final delivery of your dream vehicle.</p>
-              <div class="team-social">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="team-card fade-in-up">
-            <div class="team-image">
-              <img src="assets/images/team/team_1.jpg" alt="Team Member" class="img-fluid">
-            </div>
-            <div class="team-info">
-              <h4>David Thompson</h4>
-              <p class="team-role">Technical Specialist</p>
-              <p class="team-description">David's extensive knowledge of automotive engineering helps clients understand the technical excellence of each vehicle.</p>
-              <div class="team-social">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-              </div>
-            </div>
+            <img src="showroom_1.jpg" alt="Our Showroom" class="img-fluid rounded">
           </div>
         </div>
       </div>
@@ -111,10 +50,10 @@
           <div class="showroom-gallery">
             <div class="row">
               <div class="col-md-6 mb-3">
-                <img src="assets/images/showroom/showroom_1.jpg" alt="Showroom Interior" class="img-fluid rounded">
+                <img src="showroom_1.jpg" alt="Showroom Interior" class="img-fluid rounded">
               </div>
               <div class="col-md-6 mb-3">
-                <img src="assets/images/showroom/showroom_2.jpg" alt="Showroom Display" class="img-fluid rounded">
+                <img src="showroom_2.jpg" alt="Showroom Display" class="img-fluid rounded">
               </div>
             </div>
           </div>
