--- a/car-agency-website/src/app/pages/home/home.css
+++ b/car-agency-website/src/app/pages/home/home.css
@@ -24,6 +24,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  /* background-size: contain; */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -255,7 +256,7 @@
 .car-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: transform 0.3s ease;
 }
 
