--- a/car-agency-website/src/app/pages/home/home.html
+++ b/car-agency-website/src/app/pages/home/home.html
@@ -6,7 +6,7 @@
         class="carousel-slide"
         *ngFor="let car of featuredCars; let i = index"
         [class.active]="i === currentSlide"
-        [style.background-image]="'url(assets/images/hero.jpg)'"
+        [style.background-image]="'url(' + car.imageUrl + ')'"
       >
         <div class="hero-overlay"></div>
         <div class="hero-content">
@@ -143,7 +143,7 @@
       <div class="col-lg-3 col-md-6 mb-4" *ngFor="let car of featuredCars">
         <div class="car-card fade-in-up">
           <div class="car-image">
-            <img [src]="car.image" [alt]="car.name" class="img-fluid" />
+            <img [src]="car.imageUrl" [alt]="car.name" class="img-fluid" />
             <div class="car-overlay">
               <button class="btn btn-primary" (click)="bookVisit(car.id)">
                 <i class="fas fa-calendar-alt"></i>
